--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>stats</title>
+        <title>tsusen</title>
 
         <link rel="shortcut icon" href="favicon.ico" />
 
