--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 
             function drawChart() {
                 var data = google.visualization.arrayToDataTable([
-<!TRENDLINE_DATA!>
+//<!TRENDLINE_DATA!>
 ]);
 
                 var options = {
