--- a/html/index.html
+++ b/html/index.html
@@ -5,43 +5,17 @@
         <title>tsusen</title>
 
         <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.9/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.9/css/jquery.dataTables_themeroller.css">
+        <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.min.css">
+        <link rel="stylesheet" type="text/css" href="css/flags.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
 
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
-        <script type="text/javascript">
-            google.load("visualization", "1", {packages:["corechart"]});
-            google.setOnLoadCallback(drawChart);
-
-            function drawChart() {
-                var data = google.visualization.arrayToDataTable([
-//<!TRENDLINE_DATA!>
-]);
-
-                var options = {
-                    title: '',
-                    hAxis: {title: 'Date', format: 'yyyy-MM-dd', textStyle: {fontSize: 12}, titleTextStyle: {italic: false, fontSize: 13}},
-                    vAxis: {title: 'Intruders', textStyle: {fontSize: 12}, titleTextStyle: {italic: false, fontSize: 13}},
-                    trendlines: { },
-                    legend: {position: 'right', textStyle: {fontSize: 13}},
-                    fontName: 'monospace',
-                    chartArea: {left: 50, top: 50, width: "75%", height: "80%"},
-                };
-
-                for (var i = 0; i < data.getNumberOfColumns() - 1; i++)
-                    options.trendlines[i] = {type: 'polynomial', degree: 3};
-
-                var chart = new google.visualization.ScatterChart(document.getElementById('chart_div'));
-
-                google.visualization.events.addListener(chart, 'onmouseover', function(e){
-                    $('svg *:contains("y =")').each(function(){
-                        $(this).text('');
-                    })
-                })
-
-                chart.draw(data, options);
-            }
-        </script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.9/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </head>
 
     <body>
@@ -51,6 +25,10 @@
             </div>
         </noscript>
 
-        <div id="chart_div" style="height: 600px; width: 1200px"></div>
+        <h3>Trendlines:</h3>
+        <div id="chart" style="height: 600px; width: 1200px"></div>
+
+        <h3>Details:</h3>
+        <table id="details" width="100%" border="1" cellpadding="2" cellspacing="0" class="display compact">
     </body>
 </html>
