Minor style updates

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
         </noscript>
 
         <h3>Trendlines:</h3>
-        <div id="chart" style="height: 600px; width: 1200px"></div>
+        <div id="chart"></div>
 
         <h3>Details:</h3>
         <table id="details" width="100%" border="1" cellpadding="2" cellspacing="0" class="display compact">
