--- a/html/index.html
+++ b/html/index.html
@@ -31,6 +31,6 @@
         <br>
 
         <h3>Details:</h3>
-        <table id="details" width="100%" border="1" cellpadding="2" cellspacing="0" class="display compact">
+        <table id="details" width="100%" border="1" cellpadding="2" cellspacing="0" class="display compact"></table>
     </body>
 </html>
