Minor style update

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
         </noscript>
 
         <h3>Trendlines:</h3>
-        <div id="chart"></div>
+        <div id="chart" width="100%"></div>
 
         <br>
 
