Lots of patches

--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.9/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="js/murmurhash3_gc.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
 
