--- a/html/index.html
+++ b/html/index.html
@@ -27,5 +27,8 @@
 
         <h3>Details:</h3>
         <table id="details" width="100%" border="1" cellpadding="2" cellspacing="0" class="display compact"></table>
+
+        <br>
+        <center>Powered by <a href="https://github.com/stamparm/tsusen" style="font-weight: bold; text-decoration: none; visited: blue; color: blue" target="_blank">tsusen</a> (v<b><!VERSION!></b>)</center>
     </body>
 </html>
