--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,6 @@
         <h3>Details:</h3>
         <table id="details" width="100%" border="1" cellpadding="2" cellspacing="0" class="display compact"></table>
 
-        <div style="text-align:center">Powered by <a href="https://github.com/stamparm/tsusen" style="font-weight: bold; font-size: 105%; text-decoration: none; visited: blue; color: blue" target="_blank">tsusen</a> (v<b><!VERSION!></b>)</div>
+        <div style="text-align:center">Powered by <a href="https://github.com/stamparm/tsusen" style="font-weight: bold; text-decoration: none; visited: blue; color: blue" target="_blank">tsusen</a> (v<b><!VERSION!></b>)</div>
     </body>
 </html>
