Minor style update

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>tsusen</title>
 
-        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/thirdparty.min.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
 
