Minor style update

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
         </noscript>
 
         <h3>Trendlines:</h3>
-        <div id="chart" width="100%"></div>
+        <div id="chart"></div>
 
         <br>
 
